# sanet_relocal_demo

./: README.md  example_7scenes.ipynb  frame_seq_data.py
banet_track/: ba_backbone_drn.py  ba_direct_method.py  ba_module.py  ba_optimizer.py  ba_tracknet.py  ba_tracknet_mirror_a.py  ba_tracknet_mirror_b.py  direct_method_xyloss_torch.py  train_interface.py  train_interface_scannet.py  valid_banet_features.py
core_3dv/: camera_operator.py  camera_operator_gpu.py
core_dl/: base_net.py  base_train_box.py  logger.py  logger_file.py  logger_tensorflow.py  train_params.py
dataset/: preprocess.py
evaluator/: basic_metric.py  tum_rgbd_metric.py
evaluator/tum_rgbd_module/: evaluate_ate.py
img_proc/: basic_proc.py  img_dim.py
libs/lm_pnp/: CMakeLists.txt  README.md  cnn.h  lm_pnp_interface.cpp
libs/pycbf_filter/: CMakeLists.txt  cbf.cpp  cbf.h  cbf_interface.cpp  depth_fill.py
reloc_pipeline/: util_func.py
relocal/: backbone.py  backbone_drn.py  basic_feat_extrator.py  corres_net.py  corres_net_backbone.py  kmeans.py  point_feat.py  point_feat_verify.py  query_net.py  ransc_pnp.py  train_box.py  triplet_losses.py  unet_base.py  valid_pointnet2_modules.py  vlad_encoder.py  vlad_module.py  vlad_net.py  vlad_verify.py
relocal/pointnet2/: CMakeLists.txt  pointnet2.py
relocal_data/cambridge/: cambridge_dataset.py  cambridge_dict_preprocess.py  cambridge_manual_dataset.py
relocal_data/sun3d/: sun3d_dataset.py  (+11 more)
seq_data/: plot_seq_2d.py  random_sel_frames.py  seq_preprocess.py
visualizer/: util.py  visualizer_2d.py  visualizer_3d.py
vo_core/: track_preprocess.py
(+39 files in other folders)
